[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]
[ext_resource path="res://Assets/winSound.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="Game" type="Node2D"]

script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="." index="0"]

color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="ColorRect" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.222656, 0.222656, 0.222656, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="TimerBooster" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="TimerProjectile" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerSurvive" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="TimerDeath" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimeLabel" type="Label" parent="." index="6"]

light_mask = 4
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 832.0
margin_top = 554.0
margin_right = 1054.0
margin_bottom = 632.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Time: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="Light2D" type="Light2D" parent="TimeLabel" index="0"]

enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
texture_scale = 50.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 4
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="WinSound" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 4 )
volume_db = -35.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="TimerBooster" to="." method="_on_TimerBooster_timeout"]

[connection signal="timeout" from="TimerProjectile" to="." method="_on_TimerProjectile_timeout"]

[connection signal="timeout" from="TimerSurvive" to="." method="_on_TimerSurvive_timeout"]

[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]


